syntax = "proto3";

package minio;

service MinIOService {
  rpc FindOne (PictureById) returns (Picture) {}
  rpc CreateOne(Picture) returns (Picture) {}
}

message PictureById {
  string id = 1;
}

message Picture {
  string id = 1;
  string name = 2;
  string data = 3;
}
